Personal info Added

--- a/index.css
+++ b/index.css
@@ -19,3 +19,7 @@ hr{
   .image1{
     background-image: url("https://lh3.googleusercontent.com/0U5ZlLJxWfhdELeC00D1tf8GvIJaxKF_AYXC-R47mVi60m4buxlcuERZYAaHa3PpLK8Bfg3Reiwq8X_IcOCSee3XgwfNKVtS7V8A0-kWpO5jmZ1iAPSehVu86PM3NJBS90F-x20oO49tMdUi6R8kbdqEOewta_tf_srepHpgz60X1ciNWebDMnlfMguuFWjiyMWrT7OomIL5LzVNSwjIQCKdFFsF4q2L5UWMw5F8PotoRw7qzcMYIxCn2ThgMX97bM-Wd4C4wZS3dMeJoRpj4Pb_S_47deG8-jbILakXanhPRZwf83evSs2W1hulZW6ZTjlCyxy09Cb0WXxgyfSCPITOtVmuO5VUCypLSoyoYXV0sDSynGm9_bS-9jNyl_68fgX-dNQrRH5NpPXMZ60_5UhuWs3KnT_xyuyEPkHszHYWf9oYi0GDAaTQUFq58RuYUkyrTv0Q-4Z7d29NDCyAg3dff-ZIb605hxvaj5-_P_3tdLII3lsTBxlg21pC4rUCuM3Bs13GlMiurd2UyIqmArfAcT5fZKERxEVk-YApIR0WwZrdG-aGy8o8HpgyFtS4BchgxbZ5vjwZrGAxdxkTrwRp-JmUt_W37khI4H1Y1eKQsNkZFU6gnTt-gXPaiC-fmdp_t0rt2HgCE5xKlCT65xSVKop4cUMsFPt0T9TPyGUGcIBm7OOx9s4I6TbYeQ=w637-h848-no?authuser=0");
 }
+.about-me-para{
+    font-size: large;
+    font-weight: 450;
+}
