--- a/index.css
+++ b/index.css
@@ -32,6 +32,9 @@ background-image: url("https://github.com/deepakshisud/No-show-Paitent-analysis-
 .image5{
     background-image: url("https://lh3.googleusercontent.com/fjNoBZ68UDmXqvZy144JjYb5GFN52RaNUzR2MqXaPRDDfnJBo5vpGR37ikqKJZ0XBtXgn7pW-pSxvgbMDzLRkG8C-h_UShfEGpR-MEW7JNxktqw99UrJ9ySQLUw4zfhRYy8nVjpqq1DyZMfbrvcLeBLfdaIFOBr-DMlBTi7AwSgJn41gJpE1A2ZfdH-j7YzYg59nt7PnRXLYEm1A30g0wygQtS2oVLZbbSkMAQOdYF29VP_uLIOa5F0Oy6X4DtfRAJSfBn3Sc0dZbIH0zHjapgAFchZpC6k6-MWqK7e-SZtiWpfRPqlGugFeKFO5bvss_4JCNv16g2mvPDSSSaaOsywroPLL_xwGbQLNSmeKma1bJ2CGQKi5hcpYbVzIZkr55TdvppgMw23dCiSVoIjDbb-Z_r8zX3Fy6dqznOXI9JIb-TD5tzSPvy0lagtrBsdzSl_p3pzq6M81yXqiak1cXaeWf0G4tT2l9lb1jSvHj6vfESA4aCb_z20qSrFrn1CNMFgO02R7dtfFfZY73f_WV1BX3SdkjxcJEqdmBaDJTIoe3XMLFd60K6U4xVjL2vaQYXrwp8_Dr3C1xmXqfLciVR182Rkl2H3-rLWnrRlchb1kAj89UWV8JOae__EcWLPTIrg7H4v08JrsM_5y5NwcwjB-4CEgxmcBMImL5KIObjKy_DAjsUbsoBlKapT_yg=w391-h220-no?authuser=0");
 }
+.progress-bar{
+    background-color: rgb(255, 169, 183);
+}
 .about-me-para{
     font-size: large;
     font-weight: 450;
