--- a/index2.css
+++ b/index2.css
@@ -1,12 +1,9 @@
-.jumbotron{
-    background-image: url("https://images.unsplash.com/photo-1588587786374-ab73fa246083?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
-    background-size: cover; 
-    background-repeat: no-repeat;
-    
+body{
+    color: white;
 }
 .main{
     width: 80px;
-    border-top: 5px solid rgb(255, 169, 183);
+    border-top: 5px solid #A6035D;
 }
 
 .image {
@@ -33,7 +30,7 @@ background-image: url("https://github.com/deepakshisud/No-show-Paitent-analysis-
     background-image: url("https://lh3.googleusercontent.com/fjNoBZ68UDmXqvZy144JjYb5GFN52RaNUzR2MqXaPRDDfnJBo5vpGR37ikqKJZ0XBtXgn7pW-pSxvgbMDzLRkG8C-h_UShfEGpR-MEW7JNxktqw99UrJ9ySQLUw4zfhRYy8nVjpqq1DyZMfbrvcLeBLfdaIFOBr-DMlBTi7AwSgJn41gJpE1A2ZfdH-j7YzYg59nt7PnRXLYEm1A30g0wygQtS2oVLZbbSkMAQOdYF29VP_uLIOa5F0Oy6X4DtfRAJSfBn3Sc0dZbIH0zHjapgAFchZpC6k6-MWqK7e-SZtiWpfRPqlGugFeKFO5bvss_4JCNv16g2mvPDSSSaaOsywroPLL_xwGbQLNSmeKma1bJ2CGQKi5hcpYbVzIZkr55TdvppgMw23dCiSVoIjDbb-Z_r8zX3Fy6dqznOXI9JIb-TD5tzSPvy0lagtrBsdzSl_p3pzq6M81yXqiak1cXaeWf0G4tT2l9lb1jSvHj6vfESA4aCb_z20qSrFrn1CNMFgO02R7dtfFfZY73f_WV1BX3SdkjxcJEqdmBaDJTIoe3XMLFd60K6U4xVjL2vaQYXrwp8_Dr3C1xmXqfLciVR182Rkl2H3-rLWnrRlchb1kAj89UWV8JOae__EcWLPTIrg7H4v08JrsM_5y5NwcwjB-4CEgxmcBMImL5KIObjKy_DAjsUbsoBlKapT_yg=w391-h220-no?authuser=0");
 }
 .progress-bar{
-    background-color: rgb(255, 169, 183);
+    background-color: #A6035D;
 }
 .about-me-para{
     font-size: large;
