--- a/index.css
+++ b/index.css
@@ -18,6 +18,10 @@ hr {
 }
 
 .card {
-    padding-left: 2em;
-    padding-right: 2em;
+    margin-left: 3em;
+    margin-right: 3em;
+}
+
+.card-img-top {
+    height: 12em;
 }
