--- a/index.css
+++ b/index.css
@@ -22,6 +22,11 @@ hr {
     margin-right: 3em;
 }
 
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+  }
+
 .card-img-top {
     height: 12em;
 }
